# ramaz-ml-course-2026-student

./: README.md
00_python_bootcamp/hw/: README.md  analysis.py  python_basics.py  test_analysis.py
01_linear_algebra/exercises/: 01_linear_algebra_exercises.tex
01_linear_algebra/hw/: README.md  linear_algebra.py  score.py  test_linear_algebra.py
01_linear_algebra/summary/: summary.md
02_calculus_gradient_descent/hw/: README.md  conftest.py  derivatives.py  pyproject.toml  score.py  test_derivatives.py
